vcs/specs/parser/fail/concurrency/invalid_nursery_cancel_handler.vr
// @test: parse-fail
// @level: L0
// @tags: parser, async, nursery, cancel, error
// @description: Test invalid nursery on_cancel handler syntax
// @expected-error: E0D4

async fn test() {
    nursery |n| {
        n.spawn(async { compute() });
    } on_cancel  // Missing block after on_cancel
}
